# LibreWeb-Browser

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  Windows.md  check.sh  equation.md  main.cpp  mainwindow.ui  packaging.md  plantuml.md  screenshot_text.md  suppressions.txt  test.md  test2.md  windows.md
.cache/clangd/index/: about-dialog.cc.502D90B6644A17B0.idx  about-dialog.h.E128E5B770755E94.idx  arena.c.93FE3B1451842EE6.idx  autolink.c.D5130C617B0F06EE.idx  autolink.h.D9B725B51DA47033.idx  blocks.c.A18F42699251D5B2.idx  buffer.c.834FBAC7874DBA0F.idx  buffer.h.74019634684C752F.idx  case_fold_switch.inc.997AAF5DF9C5B58C.idx  chunk.h.CFE07DEEF66FC792.idx  client.cc.5DF12796A566CD1C.idx  client.h.6295822DB189C0B1.idx  cmark-gfm-core-extensions.h.D05CD40DECCF52EC.idx  cmark-gfm-extension_api.h.CD7161B52D14DA07.idx  cmark-gfm.h.97AAEF822E9D3507.idx  cmark.c.742C33C394343785.idx  cmark_ctype.c.974B59E06C46D784.idx  cmark_ctype.h.D04B781618311B2B.idx  commonmark.c.8220C27EBE5B48BB.idx  core-extensions.c.36A7B395936FF34A.idx  draw.cc.1164214AAC623505.idx  draw.h.ADAA2C5BF104C359.idx  entities.inc.8FFDE2677B9CD6B9.idx  ext_scanners.c.B989EE3528F6299C.idx  ext_scanners.h.D141D9360A0AF70B.idx  file.cc.97AD386D6A8DC7A3.idx  file.h.B5664B07C564E6C9.idx  footnotes.c.DF6682923B5A184B.idx  footnotes.h.627CCEA866C9D105.idx  highlight.c.BFE6B60F3011274E.idx  highlight.h.B8DF2B4D1EE45665.idx  houdini.h.CF2C3CFA0ADCFEF1.idx  houdini_href_e.c.5F4A2FEB26E13C45.idx  houdini_html_e.c.B31CEC52C8A9C732.idx  houdini_html_u.c.E937E8B3C977EFEC.idx  html.c.1C91A7F7FAF3D22E.idx  html.h.A00D885223D45972.idx  inlines.c.42E5FC23075F24B6.idx  inlines.h.761E85BC9A09EE3D.idx  ipfs-daemon.cc.0A86C0CEDE0B719B.idx  (+64 more)
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  macOS-build.yml
cmake/: Doxygen.cmake  GSettings.cmake  GitVersion.cmake  Packaging.cmake  git_version.cmake  packaging.cmake
docs/: Doxyfile  diagrams.md  research.md
docs/inspiration/: links.txt
images/: browser_logo.xcf
images/icons/: credits.txt  libreweb-browser.icns
lib/commonmarker/: README.md
lib/commonmarker/extensions/: CMakeLists.txt  core-extensions.c  highlight.c  highlight.h  subscript.c  subscript.h  superscript.c  superscript.h
lib/commonmarker/src/: CMakeLists.txt  commonmark.c
lib/ipfs-http-client/: CMakeLists.txt
lib/whereami/: CMakeLists.txt  README.md  whereami.c
misc/: Browser_sketch.epgz  Dockerfile  Doxyfile  Doxyfile.in  Info.plist  Info.plist.in  browser.desktop  credits.txt  dweb-browser.desktop  get_ipfs.sh  icon_256x256.xcf  icon_32x32.xcf  icon_48x48.xcf  icon_64x64.xcf  libreweb-browser.desktop  libreweb.rc.in  logo.xcf  package_desc.txt
misc/packaging_generic/share/icons/hicolor/: index.theme
misc/packaging_macos/: dbus-cleanup-sockets  dbus-launch  dbus-monitor  dbus-run-session  dbus-uuidgen
packaging_win/etc/gtk-3.0/: settings.ini
scripts/: build-docs.sh  build-lnx-debug.sh  build-lnx-no-docs.sh  build-lnx-prod.sh  build-lnx.sh  build-macos-prod.sh  build-run-tests.sh  build-win-prod.sh  build-win.sh  build.sh  build_prod.sh  check-format.sh  clean-up-hicolor-icons.sh  clean-up-icons.sh  cpp-check.sh  create-source-archive.sh  create_source_archive.sh  fix-format.sh  get-ipfs.sh  get-kubo.sh  get_ipfs.sh  valgrind.sh  valgrind_plot.sh
src/: CMakeLists.txt  about-dialog.cc  about-dialog.h  about.cc  about.h  draw.cc  draw.h  file.cc  file.h  ipfs-daemon.cc  ipfs-daemon.h  ipfs-process.cc  ipfs-process.h  ipfs.cc  ipfs.h  main-window.cc  main-window.h  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  markdown-render.cc  markdown-render.cpp  markdown-render.h  md-parser.cc  md-parser.h  md-render.cc  md-render.h  menu.cc  menu.h  middleware-i.h  middleware.cc  middleware.h  network.cc  network.h  option-group.cc  option-group.h  org.libreweb.browser.gschema.xml  project_config.h.in  qt-renderer.cc  (+11 more)
src/schema/: org.libreweb.browser.gschema.xml
tst/: CMakeLists.txt  draw_test.cc  file_test.cc  mock-middleware.h  parser_test.cc
